padding fixed in linked ci visible modal

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -51,6 +51,7 @@ html {
 .info__title {
     font-size: 14px;
     color: var(--N900);
+    font-weight: 600;
 }
 
 .info__subtitle {
